# kaajal

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/kaajal/: __about__.py  __init__.py  __main__.py  config.py  connection.py  distro.py
src/kaajal/cli/: __init__.py  main.py
src/kaajal/gui/: __init__.py  mainwindow.py
tests/: __init__.py
