[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaajal"
dynamic = ["version"]
description = 'Setup a remote machine'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = []
authors = [
  { name = "Miguel Bernal Marin", email = "miguel.bernal.marin@linux.intel.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "paramiko",
  "platformdirs",
  "simple-term-menu",
]

[project.urls]
Documentation = "https://github.com/miguelinux/kaajal#readme"
Issues = "https://github.com/miguelinux/kaajal/issues"
Source = "https://github.com/miguelinux/kaajal"

[project.scripts]
kaajal = "kaajal.cli:kaajal"

[project.gui-scripts]
kaajalw = "kaajal.gui:kaajalw"

[tool.hatch.version]
path = "src/kaajal/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/kaajal tests}"

[tool.coverage.run]
source_pkgs = ["kaajal", "tests"]
branch = true
parallel = true
omit = [
  "src/kaajal/__about__.py",
]

[tool.coverage.paths]
kaajal = ["src/kaajal", "*/kaajal/src/kaajal"]
tests = ["tests", "*/kaajal/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
